--- a/app/src/main/res/layout/dia_import.xml
+++ b/app/src/main/res/layout/dia_import.xml
@@ -2,63 +2,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:gravity="center">
 
     <RadioGroup
+        android:id="@+id/dia_import_radio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dia_import_radio"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:background="@android:color/transparent"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/transparent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:text="@string/import_mode"
             android:textColor="@color/light_black"
-            android:text="@string/import_mode" />
+            android:textSize="20sp" />
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/light_black"
-            android:text="@string/import_mode_integrate"
             android:id="@+id/dia_import_radio_integrate"
-            android:buttonTint="@color/ijblue" />
-
-        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:buttonTint="@color/ijblue"
+            android:text="@string/import_mode_integrate"
             android:textColor="@color/light_black"
-            android:text="@string/import_mode_skip"
+            android:textSize="20sp" />
+
+        <RadioButton
             android:id="@+id/dia_import_radio_skip"
-            android:buttonTint="@color/ijblue" />
-
-        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:buttonTint="@color/ijblue"
+            android:text="@string/import_mode_skip"
             android:textColor="@color/light_black"
-            android:text="@string/import_mode_duplicates"
+            android:textSize="20sp" />
+
+        <RadioButton
             android:id="@+id/dia_import_radio_duplicates"
-            android:buttonTint="@color/ijblue" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/ijblue"
+            android:text="@string/import_mode_duplicates"
+            android:textColor="@color/light_black"
+            android:textSize="20sp" />
     </RadioGroup>
 
     <Button
+        android:id="@+id/dia_import_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start"
-        android:id="@+id/dia_import_start"
-        android:layout_gravity="center_horizontal"
-        android:background="@android:color/transparent"
-        android:textSize="20sp"
         android:layout_below="@id/dia_import_radio"
-        android:textColor="@color/light_black"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:text="@string/start"
+        android:textColor="@color/light_black"
+        android:textSize="20sp" />
 </RelativeLayout>
