--- a/app/src/main/res/drawable/ic_outline_skip_previous_24.xml
+++ b/app/src/main/res/drawable/ic_outline_skip_previous_24.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp"
-    android:tint="#FFFFFF"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:tint="#FFFFFF"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6l-8.5,6zM16,14.14L12.97,12 16,9.86v4.28z" />
