--- a/app/src/main/res/layout/activity_advanced_search.xml
+++ b/app/src/main/res/layout/activity_advanced_search.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/root_settings"
-    android:padding="10dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,45 +15,45 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:text="@string/advanced_search_packs"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
 
             <RadioGroup
-                android:orientation="vertical"
-                android:padding="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@string/advanced_search_packs_all"
                     android:id="@+id/advanced_search_packs_all"
-                    android:buttonTint="@color/ijblue"
-                    android:textColor="@color/light_black" />
-
-                <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@string/advanced_search_packs_select"
-                    android:id="@+id/advanced_search_packs_select"
                     android:buttonTint="@color/ijblue"
-                    android:textColor="@color/light_black" />
+                    android:text="@string/advanced_search_packs_all"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/advanced_search_packs_select"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="@color/ijblue"
+                    android:text="@string/advanced_search_packs_select"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
             </RadioGroup>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rec_advanced_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/rec_advanced_search"
                 android:layout_margin="20dp"
                 tools:layout_editor_absoluteX="1dp"
                 tools:layout_editor_absoluteY="1dp" />
@@ -61,54 +61,54 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
                 android:text="@string/advanced_search_progress"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
 
             <RadioGroup
-                android:orientation="vertical"
-                android:padding="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@string/advanced_search_progress_less"
                     android:id="@+id/advanced_search_progress_less"
-                    android:buttonTint="@color/ijblue"
-                    android:textColor="@color/light_black" />
-
-                <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@string/advanced_search_progress_greater"
-                    android:id="@+id/advanced_search_progress_greater"
                     android:buttonTint="@color/ijblue"
-                    android:textColor="@color/light_black" />
+                    android:text="@string/advanced_search_progress_less"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/advanced_search_progress_greater"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="@color/ijblue"
+                    android:text="@string/advanced_search_progress_greater"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
             </RadioGroup>
 
             <EditText
+                android:id="@+id/advanced_search_progress_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
+                android:hint="@string/advanced_search_progress_value"
                 android:inputType="number"
-                android:id="@+id/advanced_search_progress_value"
-                android:hint="@string/advanced_search_progress_value" />
+                android:textColor="@color/light_black"
+                android:textColorHint="@color/light_black" />
 
             <Button
+                android:id="@+id/advanced_search_go"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:textColor="@color/button"
-                android:textSize="@dimen/card_back_size_default"
                 android:gravity="center"
                 android:text="@string/search"
-                android:id="@+id/advanced_search_go" />
+                android:textColor="@color/button"
+                android:textSize="@dimen/card_back_size_default" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
