--- a/app/src/main/res/layout/activity_default_rec.xml
+++ b/app/src/main/res/layout/activity_default_rec.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rec_default_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/rec_default_root"
     android:gravity="center">
 
     <ImageView
+        android:id="@+id/background_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/background_image"
-        android:visibility="gone"
         android:alpha="0.25"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rec_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rec_default"
-        android:layout_margin="20dp"
         android:layout_centerInParent="true"
+        android:layout_margin="20dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
 </RelativeLayout>
