--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_new_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/root_new_card"
     android:gravity="center">
 
     <ScrollView
@@ -20,8 +20,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/light_black"
-                android:text="@string/new_card_front" />
+                android:text="@string/new_card_front"
+                android:textColor="@color/light_black" />
 
             <EditText
                 android:id="@+id/new_card_front"
@@ -29,18 +29,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
+                android:hint="@string/new_card_front"
                 android:inputType="text"
-                android:hint="@string/new_card_front" />
+                android:textColor="@color/light_black"
+                android:textColorHint="@color/light_black" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/light_black"
-                android:text="@string/new_card_back" />
+                android:text="@string/new_card_back"
+                android:textColor="@color/light_black" />
 
             <EditText
                 android:id="@+id/new_card_back"
@@ -48,28 +48,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
+                android:hint="@string/new_card_back"
                 android:inputType="text"
-                android:hint="@string/new_card_back" />
+                android:textColor="@color/light_black"
+                android:textColorHint="@color/light_black" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/light_black"
-                android:text="@string/new_card_notes" />
+                android:text="@string/new_card_notes"
+                android:textColor="@color/light_black" />
 
             <EditText
                 android:id="@+id/new_card_notes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
+                android:hint="@string/new_card_notes"
                 android:inputType="textMultiLine"
-                android:hint="@string/new_card_notes" />
+                android:textColor="@color/light_black"
+                android:textColorHint="@color/light_black" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
