--- a/app/src/main/res/layout/activity_new_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_new_collection_or_pack.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_new_collection_or_pack"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/root_new_collection_or_pack"
     android:gravity="center">
 
     <ScrollView
@@ -19,9 +19,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/light_black"
                 android:gravity="center"
-                android:text="@string/collection_or_pack_name" />
+                android:text="@string/collection_or_pack_name"
+                android:textColor="@color/light_black" />
 
             <EditText
                 android:id="@+id/new_collection_or_pack_name"
@@ -29,28 +29,28 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:ems="10"
+                android:hint="@string/collection_or_pack_name"
                 android:inputType="text"
                 android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
-                android:hint="@string/collection_or_pack_name" />
+                android:textColorHint="@color/light_black" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/light_black"
-                android:text="@string/collection_or_pack_desc" />
+                android:text="@string/collection_or_pack_desc"
+                android:textColor="@color/light_black" />
 
             <EditText
                 android:id="@+id/new_collection_or_pack_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="@string/collection_or_pack_desc"
                 android:inputType="text"
                 android:textColor="@color/light_black"
-                android:textColorHint="@color/light_black"
-                android:hint="@string/collection_or_pack_desc" />
+                android:textColorHint="@color/light_black" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
