--- a/app/src/main/res/layout/activity_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_view_collection_or_pack.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_view_collection_or_pack"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/root_view_collection_or_pack"
     android:gravity="center">
 
     <ScrollView
@@ -12,35 +12,35 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/collection_or_pack_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/details_name_size_default"
                 android:gravity="center"
-                android:id="@+id/collection_or_pack_name" />
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/details_name_size_default" />
 
             <TextView
+                android:id="@+id/collection_or_pack_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/details_desc_size_default"
                 android:gravity="center"
-                android:id="@+id/collection_or_pack_desc" />
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/details_desc_size_default" />
 
             <TextView
+                android:id="@+id/collection_or_pack_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/light_black"
                 android:gravity="center"
-                android:id="@+id/collection_or_pack_date" />
+                android:textColor="@color/light_black" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
