--- a/app/src/main/res/layout/dia_info.xml
+++ b/app/src/main/res/layout/dia_info.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:gravity="center"
-    android:background="@color/background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:gravity="center">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@color/background">
+        android:background="@color/background"
+        android:gravity="center">
 
         <TextView
+            android:id="@+id/dia_info_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/dia_info_text"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:background="@android:color/transparent"
-            android:textSize="20sp"
-            android:textColor="@color/light_black"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:padding="20dp" />
+            android:padding="20dp"
+            android:textColor="@color/light_black"
+            android:textSize="20sp" />
     </RelativeLayout>
 </ScrollView>
