--- a/app/src/main/res/drawable/rec_view_collection_or_pack_background.xml
+++ b/app/src/main/res/drawable/rec_view_collection_or_pack_background.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:bottomLeftRadius="12dp"
-        android:bottomRightRadius="12dp"
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/rec_view_collection_or_pack_background_behind">
+        <shape>
+            <padding
+                android:bottom="1dp"
+                android:left="0dp"
+                android:right="1dp"
+                android:top="0dp" />
+            <corners android:radius="14dp" />
+        </shape>
+    </item>
+    <item android:id="@+id/rec_view_collection_or_pack_background_main">
+        <shape>
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+</layer-list>
