--- a/app/src/main/res/layout/dia_import.xml
+++ b/app/src/main/res/layout/dia_import.xml
@@ -11,13 +11,14 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:gravity="center_vertical|start">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/import_mode"
+            android:textAlignment="center"
             android:textColor="@color/light_black"
             android:textSize="20sp" />
 
@@ -49,14 +50,42 @@
             android:textSize="20sp" />
     </RadioGroup>
 
+
+    <LinearLayout
+        android:id="@+id/dia_import_include_settings_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dia_import_radio"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <CheckBox
+            android:id="@+id/dia_import_include_settings"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:buttonTint="@color/ijblue" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/import_export_include_settings"
+            android:textColor="@color/light_black"
+            android:textSize="16sp" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/dia_import_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/dia_import_radio"
+        android:layout_below="@id/dia_import_include_settings_layout"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@android:color/transparent"
         android:text="@string/start"
         android:textColor="@color/light_black"
